--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "build": "pnpm --parallel --filter '@polyv/*' build",
     "install:all": "pnpm install",
     "clean": "pnpm --parallel --filter '@polyv/*' clean",
-    "lint": "pnpm --parallel --filter '@polyv/*' lint"
+    "lint": "pnpm --parallel --filter '@polyv/*' lint",
+    "release": "node scripts/release.js",
+    "release:build": "pnpm clean && pnpm --filter '@polyv/vod-ai-outline-logic' build && pnpm --filter '@polyv/vod-ai-outline-ui' build:lib",
+    "release:copy": "node scripts/copy-release.js"
   },
   "devDependencies": {
     "@types/node": "^20.0.0"
